[tool.poetry]
name = "standup-db"
version = "0.1.0"
description = ""
authors = ["Gregory Antell <antellgc@gmail.com>"]
readme = "README.md"
packages = [{include = "standup_db"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
